Changes for java 8 compat